--- a/2022_SEC_PROJECT/2022_SEC_PROJECT.vcxproj.filters
+++ b/2022_SEC_PROJECT/2022_SEC_PROJECT.vcxproj.filters
@@ -60,5 +60,8 @@
     <Image Include="TileImage\Tile_D.bmp">
       <Filter>리소스 파일</Filter>
     </Image>
+    <Image Include="musicImage\musicImage_1.bmp">
+      <Filter>리소스 파일</Filter>
+    </Image>
   </ItemGroup>
 </Project>
